--- a/public/about.html
+++ b/public/about.html
@@ -5,9 +5,9 @@
 	<title>Кинотека - за проекта</title>
 	<meta name="viewport" content="width=device-width, initial-scale=0.6">
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-	<link rel="stylesheet" href="public/css/bootstrap.css">
+	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
-	<link rel="stylesheet" href="public/css/site.css">
+	<link rel="stylesheet" href="css/site.css">
 	<meta name="description" content="Кинотека - приложение за Вашият кино вкус. Информация за проекта и авторът.">
 	<meta name="keywords" content="кино, филми, сериали, тв, социална мрежа">
   	<meta name="author" content="Елена Вълчева">
