--- a/public/contacts.html
+++ b/public/contacts.html
@@ -5,8 +5,8 @@
 	<title>Кинотека - за контакти</title>
 	<meta name="viewport" content="width=device-width, initial-scale=0.6">
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-	<link rel="stylesheet" href="public/css/bootstrap.css">
-	<link rel="stylesheet" href="public/css/site.css">
+	<link rel="stylesheet" href="css/bootstrap.css">
+	<link rel="stylesheet" href="css/site.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<meta name="description" content="Кинотека - приложение за Вашият кино вкус. Информация за контакт.">
 	<meta name="keywords" content="кино, филми, сериали, тв, социална мрежа">
