--- a/public/about.html
+++ b/public/about.html
@@ -69,7 +69,7 @@
 							<div class="row">
 								<div class="col-md-12">
 									<div class="bio-image">
-										<img src="img/eli.jpg" alt="image" />
+										<img src="img/eli.png" alt="image" />
 									</div>
 								</div>
 							</div>
