--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
 <body>
 	<div class="avatar">
 		<a href="#page-4" data-toggle="tooltip" data-placement="right" title="Елена Вълчева">
-			<img src="https://scontent-sof1-1.xx.fbcdn.net/v/t1.0-1/p160x160/47474385_2807636449262671_1733012088390942720_n.jpg?_nc_cat=111&_nc_ht=scontent-sof1-1.xx&oh=23aab64ec057bde93acc2c583e962f63&oe=5C8DA412" alt="" width="44" height="44" >
+			<img src="img/eli.png" alt="" width="44" height="44" >
 		</a>
 	</div>
 	<div class="search" id="search">
